--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
+body {
+  position: relative;
+}
+
+#app {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+h3 {
+  margin-top: 0;
+}
+
 svg {
   border: 1px solid tomato;
+  width: 1700px;
+  height: 600px;
+}
+
+#tooltip {
+  position: absolute;
+  border: 1px solid black;
+  background-color: black;
+  color: white;
+  width: 120px;
+  height: 60px;
+  padding: 10px 5px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.legendText {
+  width: 35px;
+  padding: 1px;
 }
